update css and other minor things'

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,7 @@
-@import "./colors.css";
-@import "./breakpoints.css";
-@import "./utilities.css";
+@import './_settings.css';
+@import './_tools.css';
+@import './_generic.css';
+@import './_elements.css';
+/* @import "./_objects.css"; */
+@import './_components.css';
+@import './_utilities.css';
